--- a/src/modules/app/components/navbar/components/navbarMenuItem/navbarMenuItem.scss
+++ b/src/modules/app/components/navbar/components/navbarMenuItem/navbarMenuItem.scss
@@ -1,20 +1,17 @@
 .app-navbar__item {
-    align-items: center;
     display: flex;
+    align-items: center;
     cursor: pointer;
-    flex-grow: 0;
-    flex-shrink: 0;
-    line-height: 1.5;
     padding: 0.5rem 0.75rem;
-    position: relative;
     color: #fff;
 
-    transition: background-color 0.125s ease-in-out, color 0.125s ease-in-out;
+    transition: background-color 0.125s ease-in-out, color 0.125s ease-in-out, box-shadow 0.135s ease-in-out;
 
     &:not(&--disabled):not(&--active) {
         &:hover {
-            color: #fff;
-            background-color: rgba(0, 0, 0, 0.125);
+            color: rgb(0, 203, 255);
+            -webkit-box-shadow: inset 0px -3px 0px 0px rgba(0, 203, 255, 0.75);
+            box-shadow: inset 0px -3px 0px 0px rgba(0, 203, 255, 0.75);
         }
         &:active {
             background-color: rgba(0, 0, 0, 0.25);
@@ -31,7 +28,8 @@
 
     &--active {
         cursor: default;
-        color: #000;
-        background-color: #fff;
+        color: rgb(170, 209, 217);
+        -webkit-box-shadow: inset 0px -3px 0px 0px rgb(170, 209, 217, 0.75);
+        box-shadow: inset 0px -3px 0px 0px rgb(170, 209, 217, 0.75);
     }
 }
