fix payment sorting

--- a/src/shared/globalStyles.scss
+++ b/src/shared/globalStyles.scss
@@ -22,6 +22,15 @@
     &-5rem {
         width: 5rem !important;
     }
+    &-725rem {
+        width: 7.25rem !important;
+    }
+    &-10rem {
+        width: 10rem !important;
+    }
+    &-15rem {
+        width: 15rem !important;
+    }
     &-10 {
         width: 10% !important;
     }
