--- a/src/shared/globalStyles.scss
+++ b/src/shared/globalStyles.scss
@@ -51,10 +51,10 @@ table.table {
             background-color: #eff5fb;
             color: #296fa8;
         }
+    }
 
-        &[data--has-border="true"] {
-            box-shadow: inset 0 0 0 1px rgba(0, 0, 0, 0.25);
-        }
+    &.has-shadow-bordered-header thead th {
+        box-shadow: inset 0 0 0 1px rgba(0, 0, 0, 0.25);
     }
 
     &.has-borderless-header {
