--- a/src/modules/app/components/content/style.scss
+++ b/src/modules/app/components/content/style.scss
@@ -2,18 +2,10 @@
     position: relative;
 
     &__image {
-        position: absolute;
-        top: 25%;
-        width: 100%;
-        height: 100%;
-        display: flex;
-        justify-content: center;
-        align-items: flex-start;
-        user-select: none;
-
-        &--center {
-            align-items: center;
-        }
+        position: fixed;
+        top: 50%;
+        left: 50%;
+        transform: translate(-50%, -50%);
 
         img {
             min-height: 10em;
