update notification styles

--- a/src/modules/app/components/notificator/components/notificationItem/style.scss
+++ b/src/modules/app/components/notificator/components/notificationItem/style.scss
@@ -1,8 +1,7 @@
 .app-notification,
 .app-notificator__item {
-    max-height: 7.25rem;
+    max-height: 25vh;
     overflow: auto;
-    max-width: 17.5rem;
     font-size: 0.95rem;
 
     transition: 0.15s ease-in-out;
