--- a/src/shared/style/modifications.scss
+++ b/src/shared/style/modifications.scss
@@ -5,3 +5,7 @@
     transition-timing-function: ease-in-out;
     transition-property: color, border-bottom-color;
 }
+
+.modal-card {
+    overflow: auto !important;
+}
