eject same element into component

--- a/src/components/colorSquare/style.scss
+++ b/src/components/colorSquare/style.scss
@@ -1,6 +1,6 @@
-span.payment-type-color {
-    width: 1.5em;
-    height: 1.5em;
+span.app-color-preview-square {
+    width: 1.5rem;
+    height: 1.5rem;
     border: 1px solid #000;
     display: inline-block;
 
